--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "dist/app.ts",
+        "start": "nodemon src/app.ts",
         "build": "tsc"
     },
     "keywords": [],
