--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon src/app.ts",
-        "build": "tsc"
+        "start": "node dist/app.ts",
+        "build": "tsc",
+        "dev": "nodemon src/app.ts"
     },
     "keywords": [],
     "author": "",
