--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node dist/app.ts",
+        "start": "node dist/app.js",
         "build": "tsc",
         "dev": "nodemon src/app.ts"
     },
