--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "@types/express": "^4.17.17",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "mysql2": "^3.5.1"
     },
