--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-host: "50.87.237.60",
-user: "zerdance_yinon",
-password: "INONab@053508384",
-database: "zerdance_general",
-port: 3001
+# host: "50.87.237.60",
+# user: "zerdance_yinon",
+# password: "INONab@053508384",
+# database: "zerdance_general",
+# port: 3001
